// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleComponentCardsTest render with buttonAriaLabel set to: some button label 1`] = `
<div
  className="collapsibleContainer"
>
  <HeadingElementForLevel>
    <CustomizedActionButton
      aria-expanded={true}
      ariaLabel="some button label"
      className="collapsibleControl"
      data-automation-id="collapsible-component-cards-button"
      onClick={[Function]}
    >
      <span
        className="collapsibleTitle"
      >
        <HeadingElementForLevel
          headingLevel={5}
        >
          Some header
        </HeadingElementForLevel>
      </span>
    </CustomizedActionButton>
  </HeadingElementForLevel>
  <div
    className="collapsibleContainerContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest render with buttonAriaLabel set to: undefined 1`] = `
<div
  className="collapsibleContainer"
>
  <HeadingElementForLevel>
    <CustomizedActionButton
      aria-expanded={true}
      className="collapsibleControl"
      data-automation-id="collapsible-component-cards-button"
      onClick={[Function]}
    >
      <span
        className="collapsibleTitle"
      >
        <HeadingElementForLevel
          headingLevel={5}
        >
          Some header
        </HeadingElementForLevel>
      </span>
    </CustomizedActionButton>
  </HeadingElementForLevel>
  <div
    className="collapsibleContainerContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest render with containerClassName set to: a-container 1`] = `
<div
  className="a-container collapsibleContainer"
>
  <HeadingElementForLevel>
    <CustomizedActionButton
      aria-expanded={true}
      className="collapsibleControl"
      data-automation-id="collapsible-component-cards-button"
      onClick={[Function]}
    >
      <span
        className="collapsibleTitle"
      >
        <HeadingElementForLevel
          headingLevel={5}
        >
          Some header
        </HeadingElementForLevel>
      </span>
    </CustomizedActionButton>
  </HeadingElementForLevel>
  <div
    className="collapsibleContainerContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest render with containerClassName set to: undefined 1`] = `
<div
  className="collapsibleContainer"
>
  <HeadingElementForLevel>
    <CustomizedActionButton
      aria-expanded={true}
      className="collapsibleControl"
      data-automation-id="collapsible-component-cards-button"
      onClick={[Function]}
    >
      <span
        className="collapsibleTitle"
      >
        <HeadingElementForLevel
          headingLevel={5}
        >
          Some header
        </HeadingElementForLevel>
      </span>
    </CustomizedActionButton>
  </HeadingElementForLevel>
  <div
    className="collapsibleContainerContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest render with contentClassName set to: content-class-name-a 1`] = `
<div
  className="collapsibleContainer"
>
  <HeadingElementForLevel>
    <CustomizedActionButton
      aria-expanded={true}
      className="collapsibleControl"
      data-automation-id="collapsible-component-cards-button"
      onClick={[Function]}
    >
      <span
        className="collapsibleTitle"
      >
        <HeadingElementForLevel
          headingLevel={5}
        >
          Some header
        </HeadingElementForLevel>
      </span>
    </CustomizedActionButton>
  </HeadingElementForLevel>
  <div
    className="content-class-name-a collapsibleContainerContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest render with contentClassName set to: undefined 1`] = `
<div
  className="collapsibleContainer"
>
  <HeadingElementForLevel>
    <CustomizedActionButton
      aria-expanded={true}
      className="collapsibleControl"
      data-automation-id="collapsible-component-cards-button"
      onClick={[Function]}
    >
      <span
        className="collapsibleTitle"
      >
        <HeadingElementForLevel
          headingLevel={5}
        >
          Some header
        </HeadingElementForLevel>
      </span>
    </CustomizedActionButton>
  </HeadingElementForLevel>
  <div
    className="collapsibleContainerContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest toggle from expanded to collapsed: collapsed 1`] = `
<div
  className="collapsibleContainer"
>
  <HeadingElementForLevel>
    <CustomizedActionButton
      aria-expanded={true}
      className="collapsibleControl"
      data-automation-id="collapsible-component-cards-button"
      onClick={[Function]}
    >
      <span
        className="collapsibleTitle"
      >
        <HeadingElementForLevel
          headingLevel={5}
        >
          Some header
        </HeadingElementForLevel>
      </span>
    </CustomizedActionButton>
  </HeadingElementForLevel>
  <div
    className="collapsibleContainerContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest toggle from expanded to collapsed: expanded 1`] = `
<div
  className="collapsibleContainer"
>
  <HeadingElementForLevel>
    <CustomizedActionButton
      aria-expanded={true}
      className="collapsibleControl"
      data-automation-id="collapsible-component-cards-button"
      onClick={[Function]}
    >
      <span
        className="collapsibleTitle"
      >
        <HeadingElementForLevel
          headingLevel={5}
        >
          Some header
        </HeadingElementForLevel>
      </span>
    </CustomizedActionButton>
  </HeadingElementForLevel>
  <div
    className="collapsibleContainerContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;
